// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons test on android IconDiamond renders correctly 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
>
  <ARTGroup
    opacity={1}
    transform={
      Array [
        2.5,
        0,
        0,
        2.5,
        0,
        0,
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            0,
            10,
            2,
            10,
            20,
            2,
            20,
            10,
            2,
            10,
            0,
            1,
          ]
        }
        fill={
          Array [
            0,
            0.11372549019607843,
            0.11372549019607843,
            0.10588235294117647,
            1,
          ]
        }
        opacity={1}
        stroke={null}
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`Icons test on android IconEmail renders correctly 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 36.36363636363637,
      "width": 50.00000000000001,
    }
  }
>
  <ARTGroup
    opacity={1}
    transform={
      Array [
        2.272727272727273,
        0,
        0,
        2.272727272727273,
        0,
        0,
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            22,
            0,
            2,
            22,
            16,
            2,
            0,
            16,
            2,
            0,
            0,
            2,
            22,
            0,
            1,
            0,
            13.5135,
            8,
            2,
            20.2711667,
            2.23985068,
            2,
            20.0346667,
            1.91880541,
            2,
            11,
            9.20018665,
            2,
            2.04233333,
            2.00093327,
            2,
            1.80583333,
            2.32197853,
            2,
            8.56533333,
            8.08026132,
            2,
            1.80766667,
            13.8404106,
            2,
            2.04233333,
            14.1595894,
            2,
            9.0365,
            8.47970135,
            2,
            11,
            10.1595894,
            2,
            13.0423333,
            8.39944004,
            2,
            20.0346667,
            14.079328,
            2,
            20.2711667,
            13.7582828,
            2,
            13.5135,
            8,
            1,
          ]
        }
        fill={
          Array [
            0,
            0.11372549019607843,
            0.11372549019607843,
            0.10588235294117647,
            1,
          ]
        }
        opacity={1}
        stroke={null}
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`Icons test on android IconFacebook renders correctly 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 100,
      "width": 50,
    }
  }
>
  <ARTGroup
    opacity={1}
    transform={
      Array [
        5,
        0,
        0,
        5,
        -70,
        -50,
      ]
    }
  >
    <ARTGroup
      opacity={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    >
      <ARTShape
        d={
          Array [
            0,
            20.8754687,
            30.3972581,
            2,
            20.8754687,
            21.0930804,
            2,
            23.9984274,
            21.0930804,
            2,
            24.4660462,
            17.4670773,
            2,
            20.8754687,
            17.4670773,
            2,
            20.8754687,
            15.1521034,
            3,
            20.8754687,
            14.1022918,
            21.1669846,
            13.3868799,
            22.6723889,
            13.3868799,
            2,
            24.5924599,
            13.3860409,
            2,
            24.5924599,
            10.1429146,
            3,
            24.2603909,
            10.0987257,
            23.1206168,
            10,
            21.7945782,
            10,
            3,
            19.0262491,
            10,
            17.1309761,
            11.6898042,
            17.1309761,
            14.7929991,
            2,
            17.1309761,
            17.4670773,
            2,
            14,
            17.4670773,
            2,
            14,
            21.0930804,
            2,
            17.1309761,
            21.0930804,
            2,
            17.1309761,
            30.3972581,
            2,
            20.8754687,
            30.3972581,
            1,
          ]
        }
        fill={
          Array [
            0,
            0.11372549019607843,
            0.11372549019607843,
            0.10588235294117647,
            1,
          ]
        }
        opacity={1}
        stroke={null}
        strokeCap={1}
        strokeDash={null}
        strokeJoin={1}
        strokeWidth={1}
        transform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
      />
    </ARTGroup>
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`Icons test on android IconStar renders correctly 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
>
  <ARTGroup
    opacity={1}
    transform={
      Array [
        2.9411764705882355,
        0,
        0,
        2.9411764705882355,
        -35.294117647058826,
        -32.352941176470594,
      ]
    }
  >
    <ARTShape
      d={
        Array [
          0,
          20.5,
          24.9716827,
          2,
          15.0965,
          27.8124708,
          2,
          16.1284766,
          21.7955851,
          2,
          11.7569533,
          17.5344029,
          2,
          17.79825,
          16.6565511,
          2,
          20.5,
          11.1822077,
          2,
          23.20175,
          16.6565511,
          2,
          29.2430467,
          17.5344029,
          2,
          24.8715234,
          21.7955851,
          2,
          25.9035,
          27.8124708,
        ]
      }
      fill={
        Array [
          0,
          0.11372549019607843,
          0.11372549019607843,
          0.10588235294117647,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`Icons test on android IconTwitter renders correctly 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 40,
      "width": 50,
    }
  }
>
  <ARTGroup
    opacity={1}
    transform={
      Array [
        0.06666666666666667,
        0,
        0,
        0.06666666666666667,
        23.6,
        18.6,
      ]
    }
  >
    <ARTShape
      d={
        Array [
          0,
          391.3,
          -210.7,
          3,
          362.40000000000003,
          -199.79999999999998,
          333.5,
          -189,
          304.6,
          -185.39999999999998,
          3,
          337.1,
          -203.49999999999997,
          358.8,
          -235.99999999999997,
          373.3,
          -268.5,
          3,
          344.40000000000003,
          -250.4,
          311.8,
          -239.6,
          275.70000000000005,
          -232.4,
          3,
          246.80000000000004,
          -261.3,
          207.00000000000006,
          -279.4,
          163.70000000000005,
          -279.4,
          3,
          80.60000000000005,
          -279.4,
          11.900000000000034,
          -210.7,
          11.900000000000034,
          -127.59999999999997,
          3,
          11.900000000000034,
          -116.79999999999997,
          11.900000000000034,
          -102.29999999999997,
          15.500000000000034,
          -91.49999999999997,
          3,
          -110.99999999999997,
          -98.79999999999997,
          -223.09999999999997,
          -160.2,
          -298.99999999999994,
          -250.49999999999997,
          3,
          -313.49999999999994,
          -228.79999999999998,
          -320.69999999999993,
          -199.89999999999998,
          -320.69999999999993,
          -174.59999999999997,
          3,
          -320.69999999999993,
          -120.39999999999996,
          -295.3999999999999,
          -73.39999999999996,
          -251.99999999999994,
          -48.099999999999966,
          3,
          -277.29999999999995,
          -48.099999999999966,
          -298.99999999999994,
          -55.29999999999997,
          -320.69999999999993,
          -66.19999999999996,
          3,
          -320.69999999999993,
          -66.19999999999996,
          -320.69999999999993,
          -66.19999999999996,
          -320.69999999999993,
          -62.59999999999996,
          3,
          -320.69999999999993,
          9.700000000000038,
          -266.49999999999994,
          74.80000000000004,
          -197.79999999999993,
          85.60000000000002,
          3,
          -212.29999999999993,
          89.20000000000002,
          -223.09999999999994,
          89.20000000000002,
          -237.49999999999994,
          89.20000000000002,
          3,
          -248.39999999999995,
          89.20000000000002,
          -255.59999999999994,
          89.20000000000002,
          -266.3999999999999,
          85.60000000000002,
          3,
          -248.29999999999993,
          147.10000000000002,
          -190.49999999999991,
          190.40000000000003,
          -125.39999999999992,
          190.40000000000003,
          3,
          -175.99999999999991,
          230.20000000000005,
          -244.69999999999993,
          255.50000000000003,
          -313.3999999999999,
          255.50000000000003,
          3,
          -324.19999999999993,
          255.50000000000003,
          -338.69999999999993,
          255.50000000000003,
          -349.49999999999994,
          251.90000000000003,
          3,
          -280.79999999999995,
          295.20000000000005,
          -201.29999999999995,
          320.6,
          -114.59999999999994,
          320.6,
          3,
          167.2,
          320.6,
          319,
          89.3,
          319,
          -113.1,
          3,
          319,
          -120.3,
          319,
          -127.5,
          319,
          -131.2,
          3,
          344.3,
          -152.9,
          369.6,
          -181.8,
          391.3,
          -210.7,
          1,
        ]
      }
      fill={
        Array [
          0,
          0,
          0.4,
          0.6,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;

exports[`Icons test on android IconVideo renders correctly 1`] = `
<ARTSurfaceView
  style={
    Object {
      "height": 28.26086956521739,
      "width": 50,
    }
  }
>
  <ARTGroup
    opacity={1}
    transform={
      Array [
        2.1739130434782608,
        0,
        0,
        2.1739130434782608,
        0,
        0,
      ]
    }
  >
    <ARTShape
      d={
        Array [
          0,
          0.154639175,
          0.139754386,
          2,
          15.609649475,
          0.139754386,
          2,
          15.609649475,
          13.711894786,
          2,
          0.1546391749999998,
          13.711894786,
          2,
          0.1546391749999998,
          0.1397543859999999,
        ]
      }
      fill={
        Array [
          0,
          0.11372549019607843,
          0.11372549019607843,
          0.10588235294117647,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
    <ARTShape
      d={
        Array [
          0,
          16.3405361,
          4.14989474,
          2,
          16.3405361,
          9.66442105,
          2,
          22.0216082,
          12.8146667,
          2,
          22.0216082,
          0.999894737,
        ]
      }
      fill={
        Array [
          0,
          0.11372549019607843,
          0.11372549019607843,
          0.10588235294117647,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
    <ARTShape
      d={
        Array [
          0,
          23.7538144,
          0.0496140351,
          2,
          22.7616495,
          0.643508772,
          2,
          22.7616495,
          13.1902105,
          2,
          23.7538144,
          13.7782105,
        ]
      }
      fill={
        Array [
          0,
          0.11372549019607843,
          0.11372549019607843,
          0.10588235294117647,
          1,
        ]
      }
      opacity={1}
      stroke={null}
      strokeCap={1}
      strokeDash={null}
      strokeJoin={1}
      strokeWidth={1}
      transform={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
    />
  </ARTGroup>
</ARTSurfaceView>
`;
